Lisanne Top menu aangepast

--- a/Exams_Canvas_EN.html
+++ b/Exams_Canvas_EN.html
@@ -1,4 +1,7 @@
 <!-- EN -->
+
+<p> hallo </p>
+
 <p>
     <a id="topmenu"></a>
     <a id="top"></a>
@@ -83,7 +86,7 @@
             </div>
         </div>
 
-        
+
     </div>
 </div>
 <div class="content-box" style="background-color: #ffffff;">
