aanpassing button KeepOnTeaching -> icon voor external website verwijderd mbv "external" aan button class toevoegen

--- a/Homepage/official_homepage.html
+++ b/Homepage/official_homepage.html
@@ -7,7 +7,7 @@
             <div class="styleguide-section__grid-demo-element">
                 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #ededed; text-align: center;">
                     <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/enroll/N3HMY8" data-api-returntype="Page">&nbsp;<i class="icon-discussion-new">&nbsp;</i>Enroll</a>
-                    <a class="btn Button" style="margin: 5px;" href="https://tlc.uva.nl/en/article-category/kot-en/?faculty=55" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-heart"></i>
+                    <a class="btn Button external" style="margin: 5px;" href="https://tlc.uva.nl/en/article-category/kot-en/?faculty=55" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-heart"></i>
                         <span>&nbsp;</span>Keep on Teaching
                     </a>
                     <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/169" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-instructure"></i>
@@ -219,6 +219,19 @@
                         <span style="color: #3598db;">
                             <span style="color: #000000;">
                                 <span style="font-size: 11pt;"><em>
+                                        <span>FMG Dean requests Anonymous grading for major exams</span>
+                                    </em></span>
+                            </span>
+                            <br />
+                            <span style="font-size: 11pt;"><strong>
+                                    <a class="instructure_file_link inline_disabled" style="color: #3598db;" href="https://canvas.uva.nl/courses/8175/discussion_topics/367462" target="_blank" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/discussion_topics/367462" data-api-returntype="Discussion"><i class="icon-arrow-right"> &nbsp;Read more </i></a>
+                                </strong> </span>
+                        </span>
+                    </div>
+                    <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; padding: 15px;">
+                        <span style="color: #3598db;">
+                            <span style="color: #000000;">
+                                <span style="font-size: 11pt;"><em>
                                         <span>Urkund has changed its name and is now called Ouriginal</span>
                                     </em></span>
                             </span>
@@ -235,14 +248,6 @@
                                 <a class="instructure_file_link inline_disabled" style="color: #3598db;" href="https://canvas.uva.nl/courses/8175/discussion_topics/351060" target="_blank" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/discussion_topics/351060" data-api-returntype="Discussion"><i class="icon-arrow-right"> &nbsp;Read more </i></a>
                             </strong>
                             <br />
-                        </span>
-                    </div>
-                    <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; padding: 15px;">
-                        <span style="color: #3598db; font-size: 11pt;">
-                            <span style="color: #000000;"> <em>Canvas has introduced a new look to its Rich Content Editor</em></span>
-                            <br /><strong>
-                                <a class="instructure_file_link inline_disabled" style="color: #3598db;" href="https://canvas.uva.nl/courses/8175/discussion_topics/351090" target="_blank" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/discussion_topics/351090" data-api-returntype="Discussion"><i class="icon-arrow-right"> &nbsp;Read more</i></a>
-                            </strong>
                         </span>
                     </div>
                     <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; padding: 15px;">
