datums toegevoegd aan Icto Updates messages, dan zien docenten dat wij het up-to-date houden

--- a/Homepage/official_homepage.html
+++ b/Homepage/official_homepage.html
@@ -218,14 +218,15 @@
                     <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; padding: 15px;">
                         <span style="color: #3598db;">
                             <span style="color: #000000;">
-                                <span style="font-size: 11pt;"><em>
-                                        <span>FMG Dean requests Anonymous grading for major exams</span>
-                                    </em></span>
+                                <span style="font-size: 11pt;"> <em>FMG Dean requests Anonymous grading for major exams</em> </span>
                             </span>
                             <br />
                             <span style="font-size: 11pt;"><strong>
                                     <a class="instructure_file_link inline_disabled" style="color: #3598db;" href="https://canvas.uva.nl/courses/8175/discussion_topics/367462" target="_blank" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/discussion_topics/367462" data-api-returntype="Discussion"><i class="icon-arrow-right"> &nbsp;Read more </i></a>
                                 </strong> </span>
+                            <span style="color: #95a5a6;">
+                                <span style="font-size: 9pt; float: right; padding-top: 3px;"><em>May 12, 2021</em></span>
+                            </span>
                         </span>
                     </div>
                     <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; padding: 15px;">
@@ -240,14 +241,19 @@
                                     <a class="instructure_file_link inline_disabled" style="color: #3598db;" href="https://canvas.uva.nl/courses/8175/discussion_topics/351050" target="_blank" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/discussion_topics/351050" data-api-returntype="Discussion"><i class="icon-arrow-right"> &nbsp;Read more </i></a>
                                 </strong> </span>
                         </span>
+                        <span style="color: #95a5a6;">
+                            <span style="font-size: 9pt; float: right; padding-top: 3px;"><em>April 9, 2021</em></span>
+                        </span>
                     </div>
                     <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; padding: 15px;">
                         <span style="color: #3598db; font-size: 11pt;">
-                            <span style="color: #000000;"> <em>New platform available for online polling: Sendsteps!</em></span>
+                            <span style="color: #000000;"> <em>New platform available for online polling, check out Sendsteps!</em></span>
                             <br /><strong>
                                 <a class="instructure_file_link inline_disabled" style="color: #3598db;" href="https://canvas.uva.nl/courses/8175/discussion_topics/351060" target="_blank" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/discussion_topics/351060" data-api-returntype="Discussion"><i class="icon-arrow-right"> &nbsp;Read more </i></a>
                             </strong>
-                            <br />
+                        </span>
+                        <span style="color: #95a5a6;">
+                            <span style="font-size: 9pt; float: right; padding-top: 3px;"><em>April 9, 2021</em></span>
                         </span>
                     </div>
                     <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; padding: 15px;">
@@ -256,6 +262,9 @@
                             <br /><strong>
                                 <a class="instructure_file_link inline_disabled" style="color: #3598db;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool" target="_blank" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool" data-api-returntype="Page"><i class="icon-arrow-right"> &nbsp;Read more</i></a>
                             </strong>
+                        </span>
+                        <span style="color: #95a5a6;">
+                            <span style="font-size: 9pt; float: right; padding-top: 3px;"><em>March 22, 2021</em></span>
                         </span>
                     </div>
                     <a class="instructure_file_link inline_disabled" style="color: #3598db; margin-right: 5px; margin-bottom: 15px; float: right;" href="https://canvas.uva.nl/courses/8175/discussion_topics" target="_blank" rel="noopener" data-api-returntype="[Discussion]" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/discussion_topics">View all</a>
