Thesis Workflow aangepast

--- a/A-Z/Thesis-Workflow/Menu.html
+++ b/A-Z/Thesis-Workflow/Menu.html
@@ -36,7 +36,7 @@
                                         <p style="text-align: center;">
                                             <span style="color: #3598db; font-size: 17pt;">
                                                 <span style="color: #3598db;"> <strong>
-                                                        <span style="color: #000000;">Do's &amp; Don'ts</span>
+                                                        <span style="color: #000000;">About the workflow</span>
                                                     </strong> </span>
                                             </span>
                                         </p>
@@ -48,14 +48,14 @@
                                     <td style="width: 56.2347%;">
                                         <div class="styleguide-section__grid-demo-element">
                                             <img id="4377529" style="margin-right: 8px; margin-bottom: 7px;" src="https://canvas.uva.nl/courses/8175/files/4377529/preview" alt="canvas-logo-1024x1020-1.png" width="28" height="28" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4377529" data-api-returntype="File" />
+                                            <ul class="pill" style="background: #3598db; margin-top: 20px; margin-right: 8px;">
+                                                <li>
+                                                    <span style="color: #ffffff;"><strong>Teachers</strong></span>
+                                                </li>
+                                            </ul>
                                             <ul class="pill" style="background: #f26d07; margin-top: 20px; margin-right: 8px;">
                                                 <li>
                                                     <span style="color: #ffffff;"><strong>Read this first</strong></span>
-                                                </li>
-                                            </ul>
-                                            <ul class="pill" style="background: #858585; margin-top: 20px; margin-right: 8px;">
-                                                <li>
-                                                    <span style="color: #ffffff;"><strong>Checklist</strong></span>
                                                 </li>
                                             </ul>
                                             <ul class="pill" style="background: #858585; margin-top: 20px; margin-right: 8px;">
@@ -88,7 +88,7 @@
                                         <p style="text-align: center;">
                                             <span style="color: #3598db; font-size: 17pt;">
                                                 <span style="color: #3598db;"> <strong>
-                                                        <span style="color: #000000;">Detailed info</span>
+                                                        <span style="color: #000000;">Communication</span>
                                                     </strong> </span>
                                             </span>
                                         </p>
@@ -102,29 +102,29 @@
                                             <img id="4377529" style="margin-right: 8px; margin-bottom: 7px;" src="https://canvas.uva.nl/courses/8175/files/4377529/preview" alt="canvas-logo-1024x1020-1.png" width="28" height="28" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4377529" data-api-returntype="File" />
                                             <ul class="pill" style="background: #3598db; margin-top: 20px; margin-right: 8px;">
                                                 <li>
-                                                    <span style="color: #ffffff;"><strong>Teachers</strong></span>
+                                                    <span style="color: #ffffff;"><strong>Students</strong></span>
                                                 </li>
                                             </ul>
                                             <ul class="pill" style="background: #858585; margin-top: 20px; margin-right: 8px;">
                                                 <li>
-                                                    <span style="color: #ffffff;"><strong>Graduate School</strong></span>
+                                                    <span style="color: #ffffff;"><strong>Instructions</strong></span>
                                                 </li>
                                             </ul>
                                             <ul class="pill" style="background: #858585; margin-top: 20px; margin-right: 8px;">
                                                 <li>
-                                                    <span style="color: #ffffff;"><strong>Publish thesis in Canvas</strong></span>
+                                                    <span style="color: #ffffff;"><strong>#TODO</strong></span>
                                                 </li>
                                             </ul>
                                         </div>
                                         <p>
-                                            <span style="color: #5a5a5a;">Find out how the Thesis workflow works, view screencasts and discover how students can easily publish their Master Thesis to the UvA Library.</span>
+                                            <span style="color: #5a5a5a;">You can copy+paste this information to send out to students.</span>
                                         </p>
                                     </td>
                                     <td style="width: 4.47733%;">
                                         <p><strong>&nbsp;</strong></p>
                                     </td>
                                     <td style="width: 22.3964%;">
-                                        <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/uva-thesis-workflow-information" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/uva-thesis-workflow-information"><i class="icon-arrow-right"></i>
+                                        <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/uva-thesis-workflow-for-students" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/uva-thesis-workflow-for-students"><i class="icon-arrow-right"></i>
                                             <span>&nbsp;View more</span>
                                         </a>
                                     </td>
@@ -140,7 +140,7 @@
                                         <p style="text-align: center;">
                                             <span style="color: #3598db; font-size: 17pt;">
                                                 <span style="color: #3598db;"> <strong>
-                                                        <span style="color: #000000;">OWAS</span>
+                                                        <span style="color: #000000;">OWAS / PGM</span>
                                                     </strong> </span>
                                             </span>
                                         </p>
@@ -157,9 +157,14 @@
                                                     <span style="color: #ffffff;"><strong>Administration Office</strong></span>
                                                 </li>
                                             </ul>
+                                            <ul class="pill" style="background: #3598db; margin-top: 20px; margin-right: 8px;">
+                                                <li>
+                                                    <span style="color: #ffffff;"><strong>Programme managers</strong></span>
+                                                </li>
+                                            </ul>
                                             <ul class="pill" style="background: #858585; margin-top: 20px; margin-right: 8px;">
                                                 <li>
-                                                    <span style="color: #ffffff;"><strong>Overview &amp; Instructions</strong></span>
+                                                    <span style="color: #ffffff;"><strong>Support</strong></span>
                                                 </li>
                                             </ul>
                                         </div>
