--- a/Homepage/official_homepage.html
+++ b/Homepage/official_homepage.html
@@ -118,7 +118,7 @@
                                     <td style="width: auto; float: center;">
                                         <img id="4542685" src="https://canvas.uva.nl/courses/8175/files/4542685/preview" alt="noun_Document_2251786 kopie.png" width="100" height="92" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4542685" data-api-returntype="File" />
                                         <br />
-                                        <a class="btn Button" style="margin: 5px; margin-top: 5px;" href="https://canvas.uva.nl/courses/8175/pages/uva-thesis-workflow-menu" target="_blank" rel="noopener" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/uva-thesis-workflow-menu">
+                                        <a class="btn Button" style="margin: 5px; margin-top: 5px;" href="https://canvas.uva.nl/courses/8175/pages/uva-thesis-workflow-information" target="_blank" rel="noopener" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/uva-thesis-workflow-information">
                                             <span style="color: #3598db; font-size: 11pt;"><strong><i class="icon-arrow-right"></i>&nbsp;View</strong></span>
                                         </a>
                                     </td>
@@ -187,7 +187,7 @@
                         <span style="font-size: 17pt;">
                             <span style="color: #ffffff; font-size: 16pt;">
                                 <span style="color: #ffffff;"><em><strong></strong></em>
-                                    <span style="color: #000000; font-size: 16pt;">&nbsp; &nbsp;<span style="color: #7e8c8d;"><em>Search Topics &nbsp; </em></span>
+                                    <span style="color: #000000; font-size: 16pt;">&nbsp; &nbsp;<span style="color: #7e8c8d;"><em>All Topics &nbsp; </em></span>
                                     </span><em><strong> </strong></em>
                                 </span>
                             </span><em> </em>
