final grades menu walk-through & testemonials

--- a/A-Z/Grades/Final-Grades-Tool.html
+++ b/A-Z/Grades/Final-Grades-Tool.html
@@ -10,9 +10,9 @@
                         <span>&nbsp;Home</span>
                     </a>
                     <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/a-z" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/a-z" data-api-returntype="Page"><i class="icon-copy-course"></i>
-                        <span>&nbsp;View all topics (A-Z)</span>
+                        <span>&nbsp;All topics (A-Z)</span>
                     </a>
-                    <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/enroll/N3HMY8" data-api-returntype="Page">&nbsp;<i class="icon-discussion-new">&nbsp;</i>Enroll in this course</a>
+                    <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/enroll/N3HMY8" data-api-returntype="Page">&nbsp;<i class="icon-discussion-new">&nbsp;</i>Enroll</a>
                     <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/contact" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/contact"><i class="icon-group"></i>
                         <span>&nbsp;Contact</span>
                     </a>
@@ -147,6 +147,27 @@
             </div>
         </div>
     </div>
+
+    <!--<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fcfcfc; padding: 2px 15px 15px 15px;">-->
+        <div class="grid-row">
+            <div class="col-xs-12 col-md-7">
+                <h3>Get to know this tool</h3>
+                <p>
+                    <iframe title="embedded content" src="https://amsuni-my.sharepoint.com/personal/l_j_a_vandenboomen_uva_nl/_layouts/15/Doc.aspx?sourcedoc={0cdbf1c0-91d1-4706-9078-425f3af01614}&amp;action=embedview&amp;wdAr=1.7777777777777777" width="610px" height="367px"></iframe>&nbsp;
+                </p>
+                <p>&nbsp;</p>
+            </div>
+            <div class="col-xs-12 col-md-5">
+                <h3>Testimonials</h3>
+                <p>
+                    <iframe style="width: 400px; height: 225px; display: inline-block;" title="Video player for Gerben testim.mp4" data-media-type="video" src="https://canvas.uva.nl/media_objects_iframe/m-3AK7eWrACnUuNBpF1PbfmY6SWoWenGAA?type=video" allowfullscreen="allowfullscreen" allow="fullscreen" data-media-id="m-3AK7eWrACnUuNBpF1PbfmY6SWoWenGAA"></iframe>
+                </p>
+                <p>
+                    <iframe style="width: 400px; height: 225px; display: inline-block;" title="Video player for Marcel testim.mp4" data-media-type="video" src="https://canvas.uva.nl/media_objects_iframe/m-44ip2vLdigEZdKs2vWpCbusBNwt1HK4x?type=video" allowfullscreen="allowfullscreen" allow="fullscreen" data-media-id="m-44ip2vLdigEZdKs2vWpCbusBNwt1HK4x"></iframe>
+                </p>
+            </div>
+        </div>
+    <!--</div>-->
     <div class="grid-row">
         <div class="col-xs-12 col-md-6">
             <div class="styleguide-section__grid-demo-element">
@@ -1243,6 +1264,10 @@
                     <p>
                         <img src="https://canvas.uva.nl/courses/8175/files/4466442/preview" alt="Symbool dubbel vinkje" width="51" height="40" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4466442" data-api-returntype="File" />
                         <span>&nbsp;</span>= The resit grade has been successfully transferred to SIS.
+                    </p>
+                    <p>
+                        <img src="https://canvas.uva.nl/courses/8175/files/4776243/preview" alt="Symbool zandloper" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4776243" data-api-returntype="File" />
+                        <span>&nbsp;</span>= The resit grade is currently being transferred to SIS.
                     </p>
                     <p>
                         <img src="https://canvas.uva.nl/courses/8175/files/4466439/preview" alt="CRA fout symbool" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4466439" data-api-returntype="File" />= Unfortunately, an error occurred during the transfer. You don't have to act on this error! The administration office will automatically receive a message and they will contact you if anything seems wrong. In most cases, this icon only indicates errors that are excepted
