--- a/A-Z/Grades/Final-Grades-Tool-all_buttons.html
+++ b/A-Z/Grades/Final-Grades-Tool-all_buttons.html
@@ -210,11 +210,32 @@
     </div>
 
     <!-- ABOUT -->
-    <div id="tab-1" style="background-color: #ffffff; height: auto; padding: 15px;">
+    <div id="tab-1" style="background-color: #ffffff; height: auto; padding: 15px; padding-top: 20px;">
 
         <h3 style="text-align: center;">About Final Grades</h3>
 
-        <h5 style="text-align: center; margin: 15px; margin-top: 20px;">
+        <div class="content-box" style="padding: 10px; padding-left: 120px; padding-right: 120px; text-align: center; height: 460px;">
+
+            <!-- inhoud -->
+            <span style="font-size: 12pt;"><p>From 2021/22 onwards, the Final grades tool saves you a lot of time when submitting grades to SIS. You can use the Final Grades menu to add grades, use a variety of calculation options, and to publish the final grade breakdown to students and the SiS Administration</p></span>
+
+            <p>
+                <img style="position: absolute; z-index: 1; left: 140px; border-style: solid;" src="https://canvas.uva.nl/courses/8175/files/5076627/preview" alt="FinalGradesMenu.png" width="605" height="341" />
+            </p>
+            <div style="z-index: 2; position: relative; color: red; font-size: 40px; top: 90px;">
+                <a class="btn Button--primary" href="https://canvas.uva.nl/courses/8175/files/4880896?wrap=1" data-api-returntype="Page">&nbsp;<i class="icon-forward">&nbsp;</i>Final Grades <strong>walk-through</strong></a>
+            </div>
+
+            <!--<p>
+                <br />
+                <h4><span class="Button btn-primary" role="button" href="https://canvas.uva.nl/courses/8175/files/4880896?wrap=1" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/files/4880896?wrap=1">Final Grades <strong>walk-through</strong></span></h4>
+                <a class="inline_disabled" href="https://canvas.uva.nl/courses/8175/files/4880896?wrap=1" target="_blank" rel="noopener noreferrer">
+                    <img src="https://canvas.uva.nl/courses/8175/files/5076627/preview" alt="FinalGradesMenu.png" width="605" height="341" />
+                </a>&nbsp;
+            </p>-->
+        </div>
+
+        <h5 style="text-align: center; margin: 15px;">
             <span style="color: #333333;">
                 <span style="color: #34495e;">How to access:</span>
                 <a class="btn Button" style="margin: 5px;" href="#navigation1">
@@ -226,17 +247,6 @@
             </span>
         </h5>
 
-        <div class="content-box" style="padding: 15px; text-align: center;">
-            <!-- inhoud -->
-            <p>From 2021/22 onwards, the Final grades tool saves you a lot of time when submitting grades to SIS. You can use the Final Grades menu to add grades, use a variety of calculation options, and to publish the final grade breakdown to students and the SiS Administration</p>
-            <p>
-                <br />
-                <h4><span class="Button btn-primary" role="button" href="https://canvas.uva.nl/courses/8175/files/5076627/preview" data-api-returntype="File" data-api-endpoint="https://canvas.uva.nl/courses/8175/files/5076627/preview">Final Grades <strong>walk-through</strong></span></h4>
-                <a class="inline_disabled" href="https://canvas.uva.nl/courses/8175/files/4880896?wrap=1" target="_blank" rel="noopener noreferrer">
-                    <img src="https://canvas.uva.nl/courses/8175/files/5076627/preview" alt="FinalGradesMenu.png" width="605" height="341" />
-                </a>&nbsp;
-            </p>
-        </div>
     </div>
 
     <!-- Videos -->
@@ -500,7 +510,7 @@
                         </h2>
                         <p>
                             <span style="color: #34495e; margin-bottom: 40px;"><em>
-                                    <span style="font-size: 11pt;">Already have the final grades ready and don't feel like going through any more technical steps? Don't worry, you can add these grades manually in the Final Grades menu. When you're done, you can proceed directly to the last phase in this instruction: publishing the final grades to students and SiS administration.</span>
+                                    <span style="font-size: 11pt;">Already have the final grades ready and don't feel like going through any more technical steps? Don't worry, you can add the final grades manually in this menu. Once you are done, you can proceed directly to the last phase in this instruction: publishing the final grades to students and the SiS-Administration.</span>
                                 </em></span>
                         </p>
                         <br />
@@ -665,9 +675,8 @@
                     </p>
                     <span style="color: #0645AD;"><h4>Group settings</h4></span>
                     <p>
-                        <span style="color: #34495e;"><em>
-                                <span style="font-size: 11pt;">Combine items together into a group to release certain conditions or calculations around it. First create a so-called "calculated item" and then start adding the desired conditions. A calculated item serves just like a folder: you can place several items (grades) together at one place and add a title and further details to it.</span>
-                                <span style="font-size: 11pt;">Calculated items may be recognized in Final Grades by a blue link whereas regular items are displayed in plain text.</span>
+                        <span style="color: #34495e; padding-bottom: 20px;"><em>
+                                <span style="font-size: 11pt;">Combine items into a group to release certain conditions or calculations around it. This can be done by creating a 'calculated item' and adding the desired items to it. A calculated item works just like a folder and can be recognized in Final Grades by a blue link whereas regular items are displayed in plain text.</span>
                             </em></span>
                     </p>
                     <br />
@@ -676,7 +685,7 @@
         </div>
         <div class="col-xs-12 col-md-8">
             <div class="styleguide-section__grid-demo-element">
-                <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; padding-top: 15px; padding-right: 2px; height: auto; background-color: #fcfcfc;">
+                <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; padding-bottom: 20px; padding-top: 15px; padding-right: 2px; height: auto; background-color: #fcfcfc;">
                     <div class="content-box" style="padding-right: 15px;">
                         <h2>
                             <span style="color: #000000; margin-bottom: 55px;">
@@ -840,7 +849,7 @@
     <div class="grid-row">
         <div class="col-xs-12 col-md-4">
             <div class="styleguide-section__grid-demo-element">
-                <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: 425px; background-color: #fbfbfc;">
+                <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: 430px; background-color: #fbfbfc;">
                     <div class="content-box pad-box-mini border border-b">
                         <h4>
                             <span style="color: #0645AD;">
@@ -877,7 +886,7 @@
         </div>
         <div class="col-xs-12 col-md-8">
             <div class="styleguide-section__grid-demo-element">
-                <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; padding-top: 15px; padding-right: 2px; height: 425px; background-color: #fcfcfc;">
+                <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; padding-top: 15px; padding-right: 2px; height: 420px; background-color: #fcfcfc;">
                     <div class="content-box" style="padding-right: 15px;">
                         <h2>
                             <span style="color: #000000; margin-bottom: 55px;">
@@ -953,7 +962,7 @@
     <div class="grid-row">
         <div class="col-xs-12 col-md-4">
             <div class="styleguide-section__grid-demo-element">
-                <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: 415px; background-color: #fbfbfc;">
+                <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: 430px; background-color: #fbfbfc;">
                     <div class="content-box pad-box-mini border border-b">
                         <h4>
                             <span style="color: #0645AD;">
@@ -1002,13 +1011,13 @@
                                 <span style="font-size: 13pt;"> Get Ready</span>
                             </strong></p>
                         <p>
-                            <span style="font-size: 12pt;">
-                                <img id="4654665" src="https://canvas.uva.nl/courses/8175/files/4654665/preview" alt="Templafy_Smartphone iphone_Icoon.svg" width="39" height="39" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4654665" data-api-returntype="File" /><em>&nbsp; &nbsp;Take your mobile phone, you'll need it for Two Factor Authentication (2FA)</em>
+                            <span style="font-size: 11pt;">
+                                <img id="4654665" src="https://canvas.uva.nl/courses/8175/files/4654665/preview" alt="Templafy_Smartphone iphone_Icoon.svg" width="25" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4654665" data-api-returntype="File" /><em>&nbsp; &nbsp;Take your mobile phone, you'll need it for Two Factor Authentication (2FA)</em>
                             </span>
                         </p>
                         <p>
-                            <span style="font-size: 12pt;">
-                                <img id="4654663" src="https://canvas.uva.nl/courses/8175/files/4654663/preview" alt="Templafy_Internet_Icoon.svg" width="35" height="35" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4654663" data-api-returntype="File" /><em>&nbsp; &nbsp; Remove any pop-up blockers present in your URL search bar</em>
+                            <span style="font-size: 11pt;">
+                                <img id="4654663" src="https://canvas.uva.nl/courses/8175/files/4654663/preview" alt="Templafy_Internet_Icoon.svg" width="25" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4654663" data-api-returntype="File" /><em>&nbsp; &nbsp; Remove any pop-up blockers present in your URL search bar</em>
                             </span>
                         </p>
                         <p>&nbsp;</p>
@@ -1023,9 +1032,8 @@
                         <p>&nbsp;</p>
                         <p style="text-align: right;"><em> </em>
                             <span style="font-size: 13pt;">&nbsp;<span style="font-size: 12pt;">
-                                    <a href="#legend-symbols">Summary of symbols</a>
-                                </span>&nbsp; &nbsp; &nbsp; </span><em>
-                                <span style="font-size: 13pt;">&nbsp; &nbsp;</span>
+                                    <a href="#legend-symbols"><em>Summary of symbols</em></a>
+                                </span>&nbsp; &nbsp;</span><em>
                             </em><em>
                                 <span style="font-size: 13pt;">
                                     <a href="#legend-symbols"></a>&nbsp;
